# OTIS-2025

./: .gitignore  .gitmodules  .sonarcloud.properties  CMakeCache.txt  CMakeLists.txt  README.md  gg  gg.pub  index.html  index.md  sonar-project.properties
trunk/ii002826/task_02/: CMakeLists.txt  README.md  build_and_test.sh
trunk/ii002826/task_02/include/: models.h
trunk/ii002826/task_02/src/: CMakeLists.txt  linear_model.h  main.cpp  model_base.h
trunk/ii002826/task_02/test/: CMakeLists.txt  Readme.md  test_models.cpp
trunk/ii002826/task_02/test/models/: model_factory.h  nonlinear_model.h
trunk/ii002826/task_03/: .gitignore  CMakeLists.txt  Doxyfile
trunk/ii002826/task_03/.github/workflows/: publish-docs.yml
trunk/ii002826/task_03/doc/: documentation.html  readme.md
trunk/ii002826/task_03/doc/html/: classes.html  files.html  index.html  main.cpp.html  model.cpp.html  model.h.html  pid.cpp.html  pid.h.html
trunk/ii002826/task_03/src/: CMakeLists.txt  main.cpp  pid.h
trunk/ii002826/task_03/test/: test_pid.cpp
trunk/ii02701/task_02/: CMakeLists.txt
trunk/ii02701/task_02/include/: CMakeLists.txt
trunk/ii02701/task_02/src/: CMakeLists.txt  main.cpp
trunk/ii02701/task_02/test/: CMakeLists.txt  test_model.cpp  test_model_add.cpp
trunk/ii02701/task_03/: CMakeLists.txt  DoxyfileNG.txt  build.ps1  build.sh  build_docs.ps1
trunk/ii02701/task_03/doc/html/: annotated.html  class_p_i_d-members.html  class_p_i_d.html  class_p_i_d.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  index.md  main_8cpp.html  navtreedata.js  navtreeindex0.js  pid_8cpp.html  pid_8cpp.js  pid_8h.html  pid_8h.js  pid_8h_source.html  test__pid_8cpp.html  test__pid_8cpp.js
trunk/ii02701/task_03/doc/xml/: Doxyfile.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml
trunk/ii02701/task_03/src/: CMakeLists.txt  config.txt  graph.py  main.cpp  pid.cpp  pid.h
trunk/ii02701/task_03/test/: CMakeLists.txt  test_pid.cpp
trunk/ii02703/task_02/: CMakeLists.txt
trunk/ii02703/task_02/doc/: README.MD
trunk/ii02703/task_02/src/: main.cpp  models.cpp  models.hpp
trunk/ii02703/task_02/test/: tests.cpp
trunk/ii02703/task_03/test/: CMakeLists.txt  pid_tests.cpp
trunk/ii02709/task_02/src/: CMakeLists.txt  lab2.cpp  lab2.h  main.cpp
trunk/ii02709/task_03/: CMakeLists.txt  Doxyfile  Doxygen
trunk/ii02709/task_03/doc/: readme.md
trunk/ii02709/task_03/doc/html/: index.html  index.md
trunk/ii02709/task_03/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  pid.cpp  pid.h  pid_controller.cpp  pid_controller.h  plant.cpp  plant.h
trunk/ii02709/task_03/test/: CMakeLists.txt  pid_test.cpp  test_pid.cpp
trunk/ii02710/task_02/: CMakeLists.txt
trunk/ii02710/task_02/doc/: README.MD
trunk/ii02710/task_02/src/: CMakeLists.txt  model.cpp  model.h  task_02.cpp
trunk/ii02710/task_02/test/: CMakeLists.txt  test.cpp
trunk/ii02710/task_03/src/: CMakeLists.txt  build-and-run-project.bat  pid_controller.cpp  pid_controller.h  plot_temperature.py  simulation.cpp  temperature_data.csv
trunk/ii02714/task_02/src/: CMakeLists.txt  Solution.cpp  Solution.h  otis2.cpp
trunk/ii02714/task_03/test/: CMakeLists.txt  test.cpp
trunk/ii02717/task_02/src/: CMakeLists.txt
trunk/ii02717/task_03/src/: CMakeLists.txt  main.cpp  module.cpp  module.h  sript.bat
trunk/ii02720/task_02/src/: CMakeLists.txt  main.cpp
trunk/ii02720/task_02/src/factory/: factorylinearmodel.h  factorynonlinearmodel.h  ifactorymodel.h
trunk/ii02720/task_02/src/model/: isimulatedmodel.h  linearmodel.h  nonlinearmodel.h
trunk/ii02720/task_02/test/: CMakeLists.txt  test.cpp
trunk/ii02720/task_03/src/: CMakeLists.txt  adaptivecontroller.hpp  lab3main.cpp  main.cpp  model.cpp  model.h  pid.cpp  pid.h
trunk/ii02720/task_03/src/factory/: factorylinearmodel.hpp  factorynonlinearmodel.hpp  ifactorymodel.hpp
trunk/ii02720/task_03/src/model/: isimulatedmodel.hpp  linearmodel.hpp  nonlinearmodel.hpp
trunk/ii02720/task_03/src/regulator/: iregulator.hpp  pidregulator.hpp
trunk/ii02720/task_03/test/: CMakeLists.txt  test.cpp  testlab_3.cpp
trunk/ii02721/task_01/src/: CMakeLists.txt  main  main.cpp
trunk/ii02725/task_03/: CMakeLists.txt  Doxygen
trunk/ii02725/task_03/build_coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_18204c8e3f.json  ii02725_tests[1]_include.cmake  ii02725_tests[1]_tests.cmake
trunk/ii02725/task_03/doc/: Readme.md
trunk/ii02725/task_03/doc/html/: index.html  index.md
trunk/ii02725/task_03/src/: CMakeLists.txt  main.cpp  pid.cpp  pid.h  plant.cpp  plant.h
trunk/ii02725/task_03/test/: test_pid.cpp
trunk/ii02804/task_03/: CMakeLists.txt  Doxyfile
trunk/ii02804/task_03/doc/: readme.md
trunk/ii02804/task_03/doc/html/: annotated.html  class_p_i_d-members.html  class_p_i_d.html  class_p_i_d.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp.js  models_8cpp.html  models_8cpp.js  models_8h.html  models_8h.js  models_8h_source.html  navtreedata.js  navtreeindex0.js  pid_8cpp.html  pid_8h.html  (+3 more)
trunk/ii02804/task_03/src/: CMakeLists.txt  main.cpp  models.cpp  models.h  pid.cpp  pid.h
trunk/ii02804/task_03/test/: CMakeLists.txt  test_pid.cpp
trunk/ii02811/task_02/: CMakeLists.txt
trunk/ii02811/task_02/doc/: Readme.md
trunk/ii02811/task_02/src/: CMakeLists.txt  main.cpp  main.h  model.cpp
trunk/ii02811/task_02/test/: test.cpp
trunk/ii02820/task_02/: CMakeLists.txt  readme.md  run.bat
trunk/ii02820/task_02/doc/: readme.md
trunk/ii02820/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/ii02820/task_02/test/: CMakeLists.txt  test_model.cpp
(+5247 files in other folders)
